- Use proper design for prev/next arrows in manga reader - Properly center slides - Use a loading indicator and allow triggering a reload when an image fails - Report current page and progress for manga, and restore last page progress (currently not working for webtoons) - Fix close button not being properly aligned - Fix uncentered text in monthly stats image

--- a/websites/static/css/catalogue.css
+++ b/websites/static/css/catalogue.css
@@ -127,6 +127,36 @@
 	max-height: unset !important;
 }
 
+.manga-reader-webtoon .swiper-button-prev, .manga-reader-webtoon .swiper-button-next {
+	display: none;
+}
+
+.manga-reader .swiper-button-prev:after, .manga-reader .swiper-button-next:after {
+	font-family: "Font Awesome 6 Free" !important;
+	font-weight: 900;
+	color: rgb(var(--neutral-color));
+	font-size: 3rem;
+	padding: 3rem;
+}
+
+.manga-reader .swiper-button-prev:after, .manga-reader.swiper-rtl .swiper-button-next:after {
+	content: '\f053' !important;
+}
+
+.manga-reader .swiper-button-next:after, .manga-reader.swiper-rtl .swiper-button-prev:after {
+	content: '\f054' !important;
+}
+
+.manga-reader .swiper-button-prev, .manga-reader.swiper-rtl .swiper-button-next {
+	left: 1.6rem;
+	right: auto;
+}
+
+.manga-reader .swiper-button-next, .manga-reader.swiper-rtl .swiper-button-prev {
+	right: 1.6rem;
+	left: auto;
+}
+
 .manga-reader .swiper-pagination-progressbar {
 	top: unset;
 	bottom: 0;
@@ -134,6 +164,10 @@
 
 .manga-reader .swiper-slide {
 	height: unset;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
 .manga-reader .swiper-slide img {
@@ -150,6 +184,19 @@
 	font-size: 1.5rem;
 	transition: opacity .4s ease-in-out, transform .4s ease-in-out;
 	background: linear-gradient(to bottom, rgba(var(--always-negative-color),0) 0%, rgba(var(--always-negative-color),1) 100%);
+}
+
+.image-loading {
+	direction: ltr;
+	font-size: 2rem;
+	color: rgb(var(--primary-color));
+	padding: 4rem;
+}
+
+.image-error {
+	direction: ltr;
+	font-size: 1.4rem;
+	padding: 4rem;
 }
 
 .page-no-overflow {
